projects added more

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -218,82 +218,82 @@
       },
       "projects": [
         {
-    "title": "مشروع الطقس الحكومي في بنغلاديش",
-    "description": "منصة متقدمة لتحليلات الطقس. توفر هذه اللوحة الذكية رؤى شاملة ودقيقة حول بيانات الطقس في بنغلاديش بوضوح واحترافية عالية.",
-    "image": "BDW1.png",
-    "deploymentUrl": "https://www.bmdcl17.com/"
-  },
-  {
-    "title": "معهد الدعوة الإسلامية",
-    "description": "معهد الدعوة الإسلامية هو تطبيق مبني باستخدام Next.js (App Router) وTypeScript، يهدف إلى تنسيق وإعداد تقارير أنشطة الدعوة الإسلامية. يتضمن لوحات تحكم قائمة على الأدوار للمشرفين والدعاة والمساعدين والمستخدمين.",
-    "image": "ISD1.jpeg",
-    "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
-  },
-  {
-    "title": "منصة عروض النقل – تكساس",
-    "description": "توفر منصة عروض النقل في تكساس خدمات انتقال متكاملة في جميع أنحاء الولاية. تقوم بمطابقة العملاء مع شركات نقل موثوقة، وتقديم عروض أسعار فورية، وتتبع تقدم عملية النقل في الوقت الفعلي لضمان تجربة خالية من التوتر.",
-    "image": "MQT1.png",
-    "deploymentUrl": "https://movingquotetexas.com/"
-  },
-  {
-    "title": "هيلفول فُضول — متجر الكتب",
-    "description": "هيلفول فُضول هو متجر إلكتروني مبني باستخدام Next.js (App Router) وTypeScript، مخصص للكتب ودور النشر. يتضمن نظام إدارة للمنتجات والمؤلفين والناشرين والطلبات، بالإضافة إلى واجهة تسوق للعملاء تشمل التصفح والبحث وسلة المشتريات وقائمة المفضلة ونظام دفع متكامل.",
-    "image": "KG2.png",
-    "deploymentUrl": "https://hilfulfujulbd.com/"
-  },
-  {
-    "title": "منصة عروض النقل – نيويورك",
-    "description": "توفر منصة عروض النقل في نيويورك خدمات انتقال شاملة داخل الولاية، مع تقديم عروض أسعار فورية، وتتبع مباشر لحالة النقل، وربط العملاء بشركات موثوقة لضمان تجربة سلسة وآمنة.",
-    "image": "MQN1.png",
-    "deploymentUrl": "https://movingquotenewyork.com/"
-  },
-  {
-    "title": "نظام إدارة المهام للسمعة الرقمية",
-    "description": "نظام إدارة المهام للسمعة الرقمية هو منصة مبنية باستخدام Next.js (App Router) وTypeScript لإدارة عمليات العملاء بشكل متكامل. يتضمن لوحات تحكم مخصصة حسب الأدوار، وسير عمل للمهام وضبط الجودة، وإدارة أسباب الإيقاف، ونظام تقييم الأداء.",
-    "image": "NR2.png",
-    "deploymentUrl": "http://app.netreptask.com/"
-  },
-  {
-    "title": "ريبيوتيشن برايم",
-    "description": "ريبيوتيشن برايم هو نظام حديث لإدارة المهام مبني باستخدام Next.js (App Router) وTypeScript، يتيح إدارة عمليات العملاء من البداية إلى النهاية مع لوحات تحكم متعددة الأدوار وسير عمل متكامل لمراقبة الجودة وتقييم الأداء.",
-    "image": "RP2.png",
-    "deploymentUrl": "https://reputationtask.com/"
-  },
-  {
-    "title": "غرافيون — الارتقاء بالصحة والعافية والإنسانية",
-    "description": "في غرافيون نؤمن بالتقاء الفخامة والعافية، حيث يلتقي العلم بالإنسانية. نهجنا قائم على الدقة ومدعوم بالأبحاث ومستوحى من الإمكانات العميقة لازدهار الإنسان.",
-    "image": "GR1.png",
-    "deploymentUrl": "https://www.gravionne.com/"
-  },
-        {
-          "title": "جهات الاتصال في الحساب",
-          "description": "إدارة جهات الاتصال في الحساب وأذونات المستخدمين.",
-          "image": "project_11.png",
-          "deploymentUrl": "https://orm-dash-brok.vercel.app"
+          "title": "مشروع الطقس الحكومي في بنغلاديش",
+          "description": "منصة متقدمة لتحليلات الطقس. توفر هذه اللوحة الذكية رؤى شاملة ودقيقة حول بيانات الطقس في بنغلاديش بوضوح واحترافية عالية.",
+          "image": "BDW1.png",
+          "deploymentUrl": "https://www.bmdcl17.com/"
         },
         {
-          "title": "نظرة عامة على لوحة المعلومات",
-          "description": "لوحة معلومات شاملة مع تحليلات متقدمة.",
-          "image": "project_12.jpeg",
-          "deploymentUrl": "https://ormdash-app.vercel.app"
+          "title": "معهد الدعوة الإسلامية",
+          "description": "معهد الدعوة الإسلامية هو تطبيق مبني باستخدام Next.js (App Router) وTypeScript، يهدف إلى تنسيق وإعداد تقارير أنشطة الدعوة الإسلامية. يتضمن لوحات تحكم قائمة على الأدوار للمشرفين والدعاة والمساعدين والمستخدمين.",
+          "image": "ISD1.jpeg",
+          "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
         },
         {
-          "title": "حاسبة تكاليف الانتقال",
-          "description": "احسب تكاليف الانتقال باستخدام نموذج تفاعلي.",
-          "image": "project_13.jpeg",
-          "deploymentUrl": "https://moving-quote-newyork.vercel.app"
+          "title": "منصة عروض النقل – تكساس",
+          "description": "توفر منصة عروض النقل في تكساس خدمات انتقال متكاملة في جميع أنحاء الولاية. تقوم بمطابقة العملاء مع شركات نقل موثوقة، وتقديم عروض أسعار فورية، وتتبع تقدم عملية النقل في الوقت الفعلي لضمان تجربة خالية من التوتر.",
+          "image": "MQT1.png",
+          "deploymentUrl": "https://movingquotetexas.com/"
         },
         {
-          "title": "إدارة العملاء",
-          "description": "نظرة عامة على الحملات ومقاييس المشاركة للعملاء.",
-          "image": "project_14.png",
-          "deploymentUrl": "https://reputation-form.vercel.app"
+          "title": "هيلفول فُضول — متجر الكتب",
+          "description": "هيلفول فُضول هو متجر إلكتروني مبني باستخدام Next.js (App Router) وTypeScript، مخصص للكتب ودور النشر. يتضمن نظام إدارة للمنتجات والمؤلفين والناشرين والطلبات، بالإضافة إلى واجهة تسوق للعملاء تشمل التصفح والبحث وسلة المشتريات وقائمة المفضلة ونظام دفع متكامل.",
+          "image": "KG2.png",
+          "deploymentUrl": "https://hilfulfujulbd.com/"
         },
         {
-          "title": "لوحة ملخص الإجراءات",
-          "description": "تتبع المهام والأنشطة والإنتاجية الشاملة.",
-          "image": "project_15.png",
-          "deploymentUrl": "https://orm-seo.vercel.app"
+          "title": "منصة عروض النقل – نيويورك",
+          "description": "توفر منصة عروض النقل في نيويورك خدمات انتقال شاملة داخل الولاية، مع تقديم عروض أسعار فورية، وتتبع مباشر لحالة النقل، وربط العملاء بشركات موثوقة لضمان تجربة سلسة وآمنة.",
+          "image": "MQN1.png",
+          "deploymentUrl": "https://movingquotenewyork.com/"
+        },
+        {
+          "title": "نظام إدارة المهام للسمعة الرقمية",
+          "description": "نظام إدارة المهام للسمعة الرقمية هو منصة مبنية باستخدام Next.js (App Router) وTypeScript لإدارة عمليات العملاء بشكل متكامل. يتضمن لوحات تحكم مخصصة حسب الأدوار، وسير عمل للمهام وضبط الجودة، وإدارة أسباب الإيقاف، ونظام تقييم الأداء.",
+          "image": "NR2.png",
+          "deploymentUrl": "http://app.netreptask.com/"
+        },
+        {
+          "title": "ريبيوتيشن برايم",
+          "description": "ريبيوتيشن برايم هو نظام حديث لإدارة المهام مبني باستخدام Next.js (App Router) وTypeScript، يتيح إدارة عمليات العملاء من البداية إلى النهاية مع لوحات تحكم متعددة الأدوار وسير عمل متكامل لمراقبة الجودة وتقييم الأداء.",
+          "image": "RP2.png",
+          "deploymentUrl": "https://reputationtask.com/"
+        },
+        {
+          "title": "غرافيون — الارتقاء بالصحة والعافية والإنسانية",
+          "description": "في غرافيون نؤمن بالتقاء الفخامة والعافية، حيث يلتقي العلم بالإنسانية. نهجنا قائم على الدقة ومدعوم بالأبحاث ومستوحى من الإمكانات العميقة لازدهار الإنسان.",
+          "image": "GR1.png",
+          "deploymentUrl": "https://www.gravionne.com/"
+        },
+        {
+          "title": "نظام إدارة الإجازات لبنك AIBL",
+          "description": "هذا المشروع هو نظام ذكي لإدارة الحضور تم تطويره لبنك الأرافة الإسلامي المحدود. يتيح مراقبة وإدارة حضور الموظفين في الوقت الفعلي، مع لوحة تحكم ديناميكية تعرض عدد الموظفين النشطين والحاضرين والمتأخرين والغائبين والعاملين في الميدان مع نسب مئوية.",
+          "image": "AIBL1.jpeg",
+          "deploymentUrl": "https://aibl-plc.vercel.app/"
+        },
+        {
+          "title": "نظام تقارير الحمض النووي",
+          "description": "أرشيف الحمض النووي هو نظام مركزي لإدارة المختبرات، يتتبع القضايا والعينات والتقارير والتخزين ونشاط المستخدمين. يوفر تحليلات فورية ومراقبة للنظام وسير عمل مبسط لإدارة البيانات الجنائية بكفاءة.",
+          "image": "DNA1.png",
+          "deploymentUrl": "https://dna-case-management.vercel.app/login"
+        },
+        {
+          "title": "نظام إدارة العقارات",
+          "description": "تم تصميم هذه المنصة لشركات العقارات مع أدوار مميزة للمشرفين والوكلاء والعملاء. يمكن للمشرفين إدارة جميع العمليات، بينما يدير الوكلاء قوائم العقارات الخاصة بهم، ويمكن للمستخدمين تصفح وتصفية والاستفسار عن العقارات. يضمن النظام وصولًا آمنًا متعدد الأدوار ودعمًا متعدد اللغات.",
+          "image": "RE1.png",
+          "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
+        },
+        {
+          "title": "نظام إيكو مونيتور",
+          "description": "إيكو مونيتور هو نظام ذكي لمراقبة البيئة يوفر بيانات وتحليلات الطقس في الوقت الفعلي. يعرض مؤشرات رئيسية مثل درجة الحرارة والرطوبة وسرعة الرياح ومؤشر الأشعة فوق البنفسجية من خلال لوحات تفاعلية وتنبيهات ذكية لدعم اتخاذ القرار الاستباقي.",
+          "image": "EM1.jpeg",
+          "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
+        },
+        {
+          "title": "تدريب PCO",
+          "description": "تدريب PCO هو منصة متخصصة للسائقين المحترفين في المملكة المتحدة، توفر وحدات تدريب شاملة واختبارات تدريبية وإعدادًا للحصول على الشهادات لتلبية المتطلبات التنظيمية وتحسين المهارات.",
+          "image": "PCO1.png",
+          "deploymentUrl": "https://uk-driving-course.vercel.app/en"
         }
       ]
     },
