--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -215,83 +215,83 @@
         "viewDemo": "লাইভ ডেমো দেখুন"
       },
       "projects": [
-         {
-    "title": "বাংলাদেশ আবহাওয়া সরকারি প্রকল্প",
-    "description": "উন্নত আবহাওয়া বিশ্লেষণ প্ল্যাটফর্ম। এই আধুনিক ড্যাশবোর্ডটি নির্ভুলতা ও স্পষ্টতার সাথে বাংলাদেশের জন্য বিস্তৃত আবহাওয়া সংক্রান্ত তথ্য ও বিশ্লেষণ প্রদান করে।",
-    "image": "BDW1.png",
-    "deploymentUrl": "https://www.bmdcl17.com/"
-  },
-  {
-    "title": "ইসলামি দাওয়াহ ইনস্টিটিউট",
-    "description": "ইসলামি দাওয়াহ একটি Next.js (App Router) ও TypeScript ভিত্তিক অ্যাপ্লিকেশন, যা ইসলামি দাওয়াত কার্যক্রমের সমন্বয় ও রিপোর্টিংয়ের জন্য তৈরি। এতে অ্যাডমিন, দায়ী/অ্যাম্বাসেডর, অ্যাসিস্ট্যান্ট ও সাধারণ ব্যবহারকারীর জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড রয়েছে।",
-    "image": "ISD1.jpeg",
-    "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
-  },
-  {
-    "title": "মুভিং কোট টেক্সাস",
-    "description": "মুভিং টেক্সাস টেক্সাস জুড়ে সম্পূর্ণ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে সংযুক্ত করে, তাৎক্ষণিক কোট প্রদান করে, রিয়েল-টাইমে মুভিং অগ্রগতি ট্র্যাক করে এবং ঝামেলামুক্ত অভিজ্ঞতার জন্য প্রয়োজনীয় সকল রিসোর্স সরবরাহ করে।",
-    "image": "MQT1.png",
-    "deploymentUrl": "https://movingquotetexas.com/"
-  },
-  {
-    "title": "হিলফুল ফুযুল — বইয়ের দোকান",
-    "description": "হিলফুল ফুযুল একটি Next.js (App Router) ও TypeScript ভিত্তিক ই-কমার্স প্ল্যাটফর্ম, যা বই ও প্রকাশকদের জন্য বিশেষভাবে তৈরি। এতে পণ্য, লেখক, প্রকাশক ও অর্ডার ব্যবস্থাপনার জন্য অ্যাডমিন প্যানেল রয়েছে, পাশাপাশি গ্রাহকদের জন্য ক্যাটাগরি ব্রাউজিং, সার্চ, কার্ট, উইশলিস্ট এবং পেমেন্টসহ সম্পূর্ণ চেকআউট সিস্টেম অন্তর্ভুক্ত।",
-    "image": "KG2.png",
-    "deploymentUrl": "https://hilfulfujulbd.com/"
-  },
-  {
-    "title": "মুভিং কোট নিউ ইয়র্ক",
-    "description": "মুভিং কোট নিউ ইয়র্ক নিউ ইয়র্ক জুড়ে পূর্ণাঙ্গ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে যুক্ত করে, তাৎক্ষণিক কোট দেয়, রিয়েল-টাইমে মুভিং স্ট্যাটাস ট্র্যাক করে এবং একটি চাপমুক্ত অভিজ্ঞতা নিশ্চিত করে।",
-    "image": "MQN1.png",
-    "deploymentUrl": "https://movingquotenewyork.com/"
-  },
-  {
-    "title": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম",
-    "description": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম একটি Next.js (App Router) ও TypeScript ভিত্তিক প্ল্যাটফর্ম, যা সম্পূর্ণ ক্লায়েন্ট অপারেশন পরিচালনার জন্য ব্যবহৃত হয়। এতে অ্যাডমিন, AM/CEO, এজেন্ট, QC, ডাটা এন্ট্রি ও ক্লায়েন্টদের জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ওয়ার্কফ্লো, পজ কারণ এবং পারফরম্যান্স স্কোরিং অন্তর্ভুক্ত।",
-    "image": "NR2.png",
-    "deploymentUrl": "http://app.netreptask.com/"
-  },
-  {
-    "title": "রেপুটেশন প্রাইম",
-    "description": "রেপুটেশন প্রাইম একটি আধুনিক টাস্ক ম্যানেজমেন্ট সিস্টেম, যা Next.js (App Router) ও TypeScript দিয়ে তৈরি। এটি এন্ড-টু-এন্ড ক্লায়েন্ট অপারেশন পরিচালনার জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ব্যবস্থাপনা, পজ ট্র্যাকিং এবং পারফরম্যান্স মূল্যায়ন সুবিধা প্রদান করে।",
-    "image": "RP2.png",
-    "deploymentUrl": "https://reputationtask.com/"
-  },
-  {
-    "title": "গ্রাভিওন — স্বাস্থ্য, সুস্থতা ও মানবতার নতুন উচ্চতা",
-    "description": "গ্রাভিওনে আমরা বিশ্বাস করি বিলাসিতা ও সুস্থতার সংযোগে, যেখানে বিজ্ঞান ও মানবিকতা একত্রিত হয়। আমাদের দৃষ্টিভঙ্গি নির্ভুলতা-নির্ভর, গবেষণা দ্বারা পরিচালিত এবং মানব সম্ভাবনার সর্বোচ্চ বিকাশ দ্বারা অনুপ্রাণিত।",
-    "image": "GR1.png",
-    "deploymentUrl": "https://www.gravionne.com/"
-  },
         {
-          "title": "অ্যাকাউন্ট কন্টাক্টস",
-          "description": "অ্যাকাউন্টের যোগাযোগ এবং ব্যবহারকারীর অনুমতি পরিচালনা করুন।",
-          "image": "project_11.png",
-          "deploymentUrl": "https://orm-dash-brok.vercel.app"
+          "title": "বাংলাদেশ আবহাওয়া সরকারি প্রকল্প",
+          "description": "উন্নত আবহাওয়া বিশ্লেষণ প্ল্যাটফর্ম। এই আধুনিক ড্যাশবোর্ডটি নির্ভুলতা ও স্পষ্টতার সাথে বাংলাদেশের জন্য বিস্তৃত আবহাওয়া সংক্রান্ত তথ্য ও বিশ্লেষণ প্রদান করে।",
+          "image": "BDW1.png",
+          "deploymentUrl": "https://www.bmdcl17.com/"
         },
         {
-          "title": "ড্যাশবোর্ড ওভারভিউ",
-          "description": "উন্নত অ্যানালিটিক্স সহ বিস্তৃত ড্যাশবোর্ড।",
-          "image": "project_12.jpeg",
-          "deploymentUrl": "https://ormdash-app.vercel.app"
+          "title": "ইসলামি দাওয়াহ ইনস্টিটিউট",
+          "description": "ইসলামি দাওয়াহ একটি Next.js (App Router) ও TypeScript ভিত্তিক অ্যাপ্লিকেশন, যা ইসলামি দাওয়াত কার্যক্রমের সমন্বয় ও রিপোর্টিংয়ের জন্য তৈরি। এতে অ্যাডমিন, দায়ী/অ্যাম্বাসেডর, অ্যাসিস্ট্যান্ট ও সাধারণ ব্যবহারকারীর জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড রয়েছে।",
+          "image": "ISD1.jpeg",
+          "deploymentUrl": "https://hisab.hilfulfujulbd.com/"
         },
         {
-          "title": "মুভিং খরচ ক্যালকুলেটর",
-          "description": "ইনটুইটিভ ফর্ম দিয়ে মুভিং খরচ হিসাব করুন।",
-          "image": "project_13.jpeg",
-          "deploymentUrl": "https://moving-quote-newyork.vercel.app"
+          "title": "মুভিং কোট টেক্সাস",
+          "description": "মুভিং টেক্সাস টেক্সাস জুড়ে সম্পূর্ণ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে সংযুক্ত করে, তাৎক্ষণিক কোট প্রদান করে, রিয়েল-টাইমে মুভিং অগ্রগতি ট্র্যাক করে এবং ঝামেলামুক্ত অভিজ্ঞতার জন্য প্রয়োজনীয় সকল রিসোর্স সরবরাহ করে।",
+          "image": "MQT1.png",
+          "deploymentUrl": "https://movingquotetexas.com/"
         },
         {
-          "title": "ক্লায়েন্ট ম্যানেজমেন্ট",
-          "description": "ক্লায়েন্ট ক্যাম্পেইন এবং এনগেজমেন্ট মেট্রিক্সের ওভারভিউ।",
-          "image": "project_14.png",
-          "deploymentUrl": "https://reputation-form.vercel.app"
+          "title": "হিলফুল ফুযুল — বইয়ের দোকান",
+          "description": "হিলফুল ফুযুল একটি Next.js (App Router) ও TypeScript ভিত্তিক ই-কমার্স প্ল্যাটফর্ম, যা বই ও প্রকাশকদের জন্য বিশেষভাবে তৈরি। এতে পণ্য, লেখক, প্রকাশক ও অর্ডার ব্যবস্থাপনার জন্য অ্যাডমিন প্যানেল রয়েছে, পাশাপাশি গ্রাহকদের জন্য ক্যাটাগরি ব্রাউজিং, সার্চ, কার্ট, উইশলিস্ট এবং পেমেন্টসহ সম্পূর্ণ চেকআউট সিস্টেম অন্তর্ভুক্ত।",
+          "image": "KG2.png",
+          "deploymentUrl": "https://hilfulfujulbd.com/"
         },
         {
-          "title": "অ্যাকশন সামারি ড্যাশবোর্ড",
-          "description": "কর্ম, কার্যকলাপ এবং সামগ্রিক উৎপাদনশীলতা ট্র্যাক করুন।",
-          "image": "project_15.png",
-          "deploymentUrl": "https://orm-seo.vercel.app"
+          "title": "মুভিং কোট নিউ ইয়র্ক",
+          "description": "মুভিং কোট নিউ ইয়র্ক নিউ ইয়র্ক জুড়ে পূর্ণাঙ্গ স্থানান্তর সেবা প্রদান করে। এই প্ল্যাটফর্মটি গ্রাহকদের নির্ভরযোগ্য মুভারদের সাথে যুক্ত করে, তাৎক্ষণিক কোট দেয়, রিয়েল-টাইমে মুভিং স্ট্যাটাস ট্র্যাক করে এবং একটি চাপমুক্ত অভিজ্ঞতা নিশ্চিত করে।",
+          "image": "MQN1.png",
+          "deploymentUrl": "https://movingquotenewyork.com/"
+        },
+        {
+          "title": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম",
+          "description": "নেট রেপুটেশন টাস্ক ম্যানেজমেন্ট সিস্টেম একটি Next.js (App Router) ও TypeScript ভিত্তিক প্ল্যাটফর্ম, যা সম্পূর্ণ ক্লায়েন্ট অপারেশন পরিচালনার জন্য ব্যবহৃত হয়। এতে অ্যাডমিন, AM/CEO, এজেন্ট, QC, ডাটা এন্ট্রি ও ক্লায়েন্টদের জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ওয়ার্কফ্লো, পজ কারণ এবং পারফরম্যান্স স্কোরিং অন্তর্ভুক্ত।",
+          "image": "NR2.png",
+          "deploymentUrl": "http://app.netreptask.com/"
+        },
+        {
+          "title": "রেপুটেশন প্রাইম",
+          "description": "রেপুটেশন প্রাইম একটি আধুনিক টাস্ক ম্যানেজমেন্ট সিস্টেম, যা Next.js (App Router) ও TypeScript দিয়ে তৈরি। এটি এন্ড-টু-এন্ড ক্লায়েন্ট অপারেশন পরিচালনার জন্য ভূমিকা-ভিত্তিক ড্যাশবোর্ড, টাস্ক ও QC ব্যবস্থাপনা, পজ ট্র্যাকিং এবং পারফরম্যান্স মূল্যায়ন সুবিধা প্রদান করে।",
+          "image": "RP2.png",
+          "deploymentUrl": "https://reputationtask.com/"
+        },
+        {
+          "title": "গ্রাভিওন — স্বাস্থ্য, সুস্থতা ও মানবতার নতুন উচ্চতা",
+          "description": "গ্রাভিওনে আমরা বিশ্বাস করি বিলাসিতা ও সুস্থতার সংযোগে, যেখানে বিজ্ঞান ও মানবিকতা একত্রিত হয়। আমাদের দৃষ্টিভঙ্গি নির্ভুলতা-নির্ভর, গবেষণা দ্বারা পরিচালিত এবং মানব সম্ভাবনার সর্বোচ্চ বিকাশ দ্বারা অনুপ্রাণিত।",
+          "image": "GR1.png",
+          "deploymentUrl": "https://www.gravionne.com/"
+        },
+        {
+          "title": "AIBL ছুটি ব্যবস্থাপনা সিস্টেম",
+          "description": "এই প্রকল্পটি আল-আরাফাহ ইসলামী ব্যাংক পিএলসির জন্য তৈরি একটি স্মার্ট উপস্থিতি ব্যবস্থাপনা সিস্টেম। এটি রিয়েল-টাইমে কর্মীদের উপস্থিতি পর্যবেক্ষণ ও ব্যবস্থাপনা করে। সিস্টেমটি মোট সক্রিয় কর্মী, উপস্থিত, দেরিতে আগত, অনুপস্থিত এবং ডিউটিতে থাকা কর্মীদের শতাংশসহ একটি ডায়নামিক ড্যাশবোর্ডে প্রদর্শন করে।",
+          "image": "AIBL1.jpeg",
+          "deploymentUrl": "https://aibl-plc.vercel.app/"
+        },
+        {
+          "title": "ডিএনএ রিপোর্ট সিস্টেম",
+          "description": "ডিএনএ আর্কাইভ একটি কেন্দ্রীভূত ল্যাবরেটরি ব্যবস্থাপনা সিস্টেম, যা কেস, নমুনা, রিপোর্ট, সংরক্ষণ এবং ব্যবহারকারীর কার্যক্রম ট্র্যাক করে। এটি রিয়েল-টাইম অ্যানালিটিক্স, সিস্টেম মনিটরিং এবং দক্ষ ফরেনসিক ডেটা ব্যবস্থাপনার জন্য সুসংগঠিত ওয়ার্কফ্লো প্রদান করে।",
+          "image": "DNA1.png",
+          "deploymentUrl": "https://dna-case-management.vercel.app/login"
+        },
+        {
+          "title": "রিয়েল এস্টেট ব্যবস্থাপনা সিস্টেম",
+          "description": "এই প্ল্যাটফর্মটি রিয়েল এস্টেট প্রতিষ্ঠানের জন্য তৈরি, যেখানে অ্যাডমিন, এজেন্ট ও ক্লায়েন্টদের জন্য আলাদা ভূমিকা রয়েছে। অ্যাডমিনরা সকল অপারেশন ও সম্পত্তি ব্যবস্থাপনা করতে পারে, এজেন্টরা নিজস্ব প্রপার্টি তালিকা যোগ ও পরিচালনা করতে পারে, এবং ব্যবহারকারীরা প্রপার্টি ব্রাউজ, ফিল্টার ও অনুসন্ধান করতে পারে। সিস্টেমটি নিরাপদ ভূমিকা-ভিত্তিক অ্যাক্সেস, বহুভাষা সমর্থন এবং কার্যকর যোগাযোগ নিশ্চিত করে।",
+          "image": "RE1.png",
+          "deploymentUrl": "https://real-estate-admin-jade.vercel.app/en"
+        },
+        {
+          "title": "ইকোমনিটর সিস্টেম",
+          "description": "ইকোমনিটর একটি স্মার্ট পরিবেশ পর্যবেক্ষণ সিস্টেম, যা রিয়েল-টাইম আবহাওয়া তথ্য ও বিশ্লেষণ প্রদান করে। এতে তাপমাত্রা, আর্দ্রতা, বাতাসের গতি, চাপ, ইউভি সূচক ও বৃষ্টিপাতসহ গুরুত্বপূর্ণ ডেটা ইন্টারঅ্যাকটিভ ড্যাশবোর্ড ও চার্টের মাধ্যমে প্রদর্শিত হয়। ট্রেন্ড অ্যানালাইসিস, অ্যানিমেটেড ভিজুয়ালাইজেশন এবং সতর্কবার্তা সহ এটি আধুনিক ও ব্যবহারবান্ধব অভিজ্ঞতা প্রদান করে।",
+          "image": "EM1.jpeg",
+          "deploymentUrl": "https://eco-monitor-jade.vercel.app/"
+        },
+        {
+          "title": "PCO প্রশিক্ষণ",
+          "description": "PCO প্রশিক্ষণ যুক্তরাজ্যের পেশাদার ড্রাইভারদের জন্য একটি বিশেষায়িত প্ল্যাটফর্ম। এতে প্রশিক্ষণ মডিউল, অনুশীলন পরীক্ষা এবং সার্টিফিকেশন প্রস্তুতির সুবিধা রয়েছে, যা ড্রাইভারদের নিয়ন্ত্রক প্রয়োজনীয়তা পূরণ ও দক্ষতা উন্নয়নে সহায়তা করে।",
+          "image": "PCO1.png",
+          "deploymentUrl": "https://uk-driving-course.vercel.app/en"
         }
       ]
     },
